# BTWorkshop_ROSCON_ES25

./: .gitignore  README.md
Docker/: Dockerfile  build_container.sh  deps.repos  dev-docker-compose.yaml  docker-compose.yaml  entrypoint.sh  pyrobosim.repos
Docker/DevContainer/.devcontainer/: devcontainer.json
src/behaviortree_pyrobosim/: CMakeLists.txt  package.xml  palettes_description.xml  plugins_description.xml
src/behaviortree_pyrobosim/behavior_trees/: BT0.xml  BTDevROSCON_ES25.btproj
src/behaviortree_pyrobosim/config/: executor.yaml
src/behaviortree_pyrobosim/launch/: executor.launch.xml
src/behaviortree_pyrobosim/src/: bt_executor.cpp  plugin.cpp
src/simple_pyrobosim_msgs/: CMakeLists.txt  package.xml
src/simple_pyrobosim_msgs/action/: ApproachDoor.action  Navigate.action  Open.action  Pick.action  Place.action
src/simple_pyrobosim_msgs/msg/: SimpleRobotState.msg
src/simple_pyrobosim_msgs/srv/: IsFurnitureOpen.srv  IsPassageDoorOpen.srv
src/simple_pyrobosim_ros/: package.xml  setup.cfg  setup.py
src/simple_pyrobosim_ros/launch/: demo.launch.py
src/simple_pyrobosim_ros/simple_pyrobosim_ros/: simple_pyrobosim_wrapper.py
worlds/: world3.yaml  world4.yaml
