<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behaviortree_pyrobosim</name>
  <version>0.0.0</version>
  <description>Behavior Tree plugin library for interacting with pyrobosim</description>
  <maintainer email="devis.dalmoro@eurecat.org">Devis Dal Moro</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_ros2</depend>
  <depend>simple_pyrobosim_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
