<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_pyrobosim_msgs</name>
  <version>0.0.0</version>
  <description>A wrapper msgs on top of pyrobosim ros for ROSCON ES25</description>
  <maintainer email="devis.dalmoro@eurecat.org">devis.dalmoro@local.eurecat.org</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
