<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_pyrobosim_ros</name>
  <version>0.0.0</version>
  <description>A wrapper on top of pyrobosim ros for ROSCON ES25</description>
  <maintainer email="devis.dalmoro@eurecat.org">Devis Dal Moro</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>pyrobosim_msgs</depend>
  <depend>simple_pyrobosim_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
